RESOLVED FIXED122987
Fix three bugs in the equals() implementations for css gradients.
https://bugs.webkit.org/show_bug.cgi?id=122987
Summary Fix three bugs in the equals() implementations for css gradients.
Nico Weber
Reported 2013-10-17 12:42:24 PDT
Fix three bugs in the equals() implementations for css gradients.
Attachments
Patch (8.17 KB, patch)
2013-10-17 13:05 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2013-10-17 13:05:02 PDT
Andreas Kling
Comment 2 2013-10-17 13:45:39 PDT
Comment on attachment 214492 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214492&action=review r=me, but.. > Source/WebCore/css/CSSGradientValue.cpp:737 > else > - equalXorY = !other.m_firstX || !other.m_firstY; > + equalXandY = !other.m_firstX && !other.m_firstY; Don't we already know that both firstX and firstY are null at this point? > Source/WebCore/css/CSSGradientValue.cpp:1149 > else > - equalXorY == !other.m_firstX || !other.m_firstY; > + equalXandY = !other.m_firstX && !other.m_firstY; And here?
Nico Weber
Comment 3 2013-10-17 13:46:35 PDT
Comment on attachment 214492 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=214492&action=review Thanks! >> Source/WebCore/css/CSSGradientValue.cpp:737 >> + equalXandY = !other.m_firstX && !other.m_firstY; > > Don't we already know that both firstX and firstY are null at this point? Yes, but only for this, not for other
Andreas Kling
Comment 4 2013-10-17 13:49:09 PDT
(In reply to comment #3) > (From update of attachment 214492 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=214492&action=review > > Thanks! > > >> Source/WebCore/css/CSSGradientValue.cpp:737 > >> + equalXandY = !other.m_firstX && !other.m_firstY; > > > > Don't we already know that both firstX and firstY are null at this point? > > Yes, but only for this, not for other Durr. :|
WebKit Commit Bot
Comment 5 2013-10-17 14:13:09 PDT
Comment on attachment 214492 [details] Patch Clearing flags on attachment: 214492 Committed r157598: <http://trac.webkit.org/changeset/157598>
WebKit Commit Bot
Comment 6 2013-10-17 14:13:12 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.